# 748Project

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  basis.cpp  extract.cpp  partition.py  pipeline.sh  plot.py  prep_svm.cpp  reduce.cpp
inc/: audio.hpp  colour.hpp  csv.hpp  extraction.hpp  fileio.hpp  reduce.hpp  window.hpp
presentation/: .gitignore  presentation.tex
presentation/img/: pipeline.drawio
src/: CMakeLists.txt  audio.cpp  audio.hpp  colour.cpp  csv.cpp  extraction.cpp  fileio.cpp  reduce.cpp  window.cpp
